<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin16"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/ivMoviePoster"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin8"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblMovieTitle"
                    android:textSize="@dimen/text_size_20"/>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblRating"
                    android:textSize="@dimen/text_size_20"/>

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblReleaseDate"
                    android:textSize="@dimen/text_size_20"/>

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin8"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnMarkAsFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_favorite"
            android:background="@color/primary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/margin16"/>

        <Button
            android:id="@+id/btnUnmarkAsFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unmark_as_favorite"
            android:background="@color/primary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/margin16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblSynopsis"
            android:textSize="@dimen/text_size_20"/>

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:layout_marginBottom="@dimen/margin8"
            android:layout_marginTop="@dimen/margin16"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTrailers"
            android:textSize="@dimen/text_size_20"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblReviews"
            android:textSize="@dimen/text_size_20"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>